--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">MERN Tasks</h1>
           <p class="col-md-8 fs-4">
-            Name - Shashwat Shandilya
+            Name - Vedant Dwivedi
             <br />
-            Roll No. - 21BCE11173
+            Roll No. - 21BCE10716
             <br />
-            Email - shashwat.shandilya2021@vitbhopal.ac.in
+            Email - vedant.dwivedi2021@vitbhopal.ac.in
           </p>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
